--- a/LearnToCode/Components/Pages/Account/Login.razor
+++ b/LearnToCode/Components/Pages/Account/Login.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Login"
+@using DeveloperHub.ViewModels
 
 <NavMenu />
 
@@ -11,19 +12,16 @@
                 </div>
                 <h2 class="text-3xl font-bold text-gray-900 mb-2">Sign in to your account</h2>
                 <p class="text-sm text-gray-600 mb-6">Not a member? <a href="/Signup" class="text-indigo-600">Sign up now!</a></p>
-                <EditForm Model="@_model" OnSubmit="SubmitFormAsync" FormName="LoginForm">
-                    <FluentValidationValidator DisableAssemblyScanning="true" Validator="@_validator" />
+                <EditForm Model="@LoginModel" OnValidSubmit="SubmitFormAsync" FormName="LoginForm">
                     <DataAnnotationsValidator/>
                     <div class="flex flex-col gap-6">
                         <div>
                             <label for="email" class="sr-only">Email address</label>
-                            <InputText @bind-Value="_model.Email" id="email" name="email" type="email" class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Email address"/>
-                            <ValidationMessage class="mt-1 text-sm text-red-600" For="() => _model.Email" />
+                            <InputText @bind-Value="LoginModel.Email" type="email" class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Email address" />
                         </div>
                         <div>
                             <label for="password" class="sr-only">Password</label>
-                            <InputText @bind-Value="_model.Password" id="password" name="password" type="password" class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password" />
-                            <ValidationMessage class="mt-1 text-sm text-red-600" For="() => _model.Password" />
+                            <InputText @bind-Value="LoginModel.Password" type="password" class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password" />
                         </div>
                         <div class="flex items-center justify-end w-full">
                             <div class="text-sm w-full">
@@ -54,3 +52,32 @@
         </div>
     </div>
 </div>
+
+@code {
+    [CascadingParameter]
+    public HttpContext? HttpContext { get; set; }
+
+    [SupplyParameterFromForm]
+    public LoginViewModel LoginModel { get; set; } = new();
+
+    private string? _errorMessage;
+
+    private async Task SubmitFormAsync()
+    {
+        if (string.IsNullOrWhiteSpace(LoginModel.Email))
+        {
+            _errorMessage = "Email is required";
+            return;
+        }
+
+        if (string.IsNullOrWhiteSpace(LoginModel.Password))
+        {
+            _errorMessage = "Password is required";
+            return;
+        }
+
+        var response = await ConfirmLogin().ConfigureAwait(false);
+        if (response)
+            navigationManager.NavigateTo("/");
+    }
+}
