--- a/LearnToCode/Components/App.razor
+++ b/LearnToCode/Components/App.razor
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/site.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <script>document.documentElement.classList.add('js')</script>
     <HeadOutlet />
 </head>
 
